updates to project - added sending emails to user on various functionality:  1. added the password - reset functionality with email verification and token generation.  2. added the change password functionality with email confirmation.  3. added the email confirmation for order-creation and cancellation flow using kafka.  4. Added the archive functionality for order  5. added payment table in payment service for persisting payment information.