@@ -1,7 +1,11 @@
 package dev.navneet.ordermanagementservice.services;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import dev.navneet.ordermanagementservice.config.KafkaProducerClient;
 import dev.navneet.ordermanagementservice.dtos.CheckoutRequestDto;
 import dev.navneet.ordermanagementservice.dtos.OrderResponseDto;
+import dev.navneet.ordermanagementservice.dtos.SendEmailMessageDto;
+import dev.navneet.ordermanagementservice.dtos.UserDto;
 import dev.navneet.ordermanagementservice.exceptions.OrderNotFoundException;
 import dev.navneet.ordermanagementservice.models.Order;
 import dev.navneet.ordermanagementservice.models.OrderItem;
@@ -15,7 +19,9 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
@@ -25,10 +31,16 @@ public class OrderServiceImpl implements OrderService {
     private final OrderRepository orderRepository;
     private final OrderMapper orderMapper;
     private final Logger logger = LoggerFactory.getLogger(OrderServiceImpl.class);
+    private final KafkaProducerClient kafkaProducerClient;
+    private final ObjectMapper objectMapper;
+    private final UserClient userClient;
 
-    public OrderServiceImpl(OrderRepository orderRepository, OrderMapper orderMapper) {
+    public OrderServiceImpl(OrderRepository orderRepository, OrderMapper orderMapper, KafkaProducerClient kafkaProducerClient, ObjectMapper objectMapper, UserClient userClient) {
         this.orderRepository = orderRepository;
         this.orderMapper = orderMapper;
+        this.kafkaProducerClient = kafkaProducerClient;
+        this.objectMapper = objectMapper;
+        this.userClient = userClient;
     }
 
     // Create an order based on the checkout request
@@ -38,6 +50,7 @@ public class OrderServiceImpl implements OrderService {
         order.setUserId(checkoutRequestDto.getUserId());
         order.setDeliveryAddress(checkoutRequestDto.getDeliveryAddress());
         order.setTotalAmount(checkoutRequestDto.getTotalAmount());
+        order.setPaymentMethod(checkoutRequestDto.getPaymentMethod());
         order.setStatus(OrderStatus.PENDING);  // Initial status is PENDING
         order.setOrderDate(LocalDateTime.now());
         order.setExpectedDeliveryDate(calculateExpectedDeliveryDate());
@@ -56,21 +69,83 @@ public class OrderServiceImpl implements OrderService {
                     orderItem.setOrder(order);
                     return orderItem;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         order.setOrderItems(orderItems);
-        System.out.println("\n Order details before payment details: \n "+ order.toString());
+       logger.info("\n Order details before payment details: \n {} ", order);
 
         // Step 3: Save the order with PENDING status
         Order savedOrder = orderRepository.save(order);
 
         // Step 4: Simulate payment processing (mocked using Thread.sleep)
-        processMockPayment(savedOrder);
+        String paymentResponse = processMockPayment(savedOrder);
 
-        System.out.println("\n Saved order details post payment service call : \n "+ savedOrder.toString());
-        // Step 5: Convert to OrderResponseDto and return
-        System.out.println("\n Returning OrderResponse dto details: \n "+ savedOrder.toString());
-        return orderMapper.toOrderResponseDto(savedOrder);
+        // Step 5: Update the order status based on payment response
+        if (paymentResponse.equalsIgnoreCase("Payment successful"))
+            savedOrder.setStatus(OrderStatus.PLACED);
+        else
+            savedOrder.setStatus(OrderStatus.PENDING_PAYMENT);
+
+        // Send confirmation email to the user for the order placed
+        Long userId = checkoutRequestDto.getUserId();
+        UserDto userDto = fetchUserDetails(userId);
+
+        // Proceed with email sending if user details are available
+        if (userDto != null) {
+            try {
+                // Sending signup message to Kafka (assuming it's relevant)
+                kafkaProducerClient.sendMessage("orderCreated", objectMapper.writeValueAsString(userDto));
+                // Preparing conditional email message based on payment status
+                SendEmailMessageDto emailMessage = new SendEmailMessageDto();
+                emailMessage.setTo(userDto.getEmail());
+                emailMessage.setFrom("admin@scaler.com");
+
+                if (savedOrder.getStatus() == OrderStatus.PLACED) {
+                    // Payment successful email content
+                    emailMessage.setSubject("Order Confirmation for Order ID " + savedOrder.getId());
+                    emailMessage.setBody("Dear " + userDto.getEmail() + ",\n\n" +
+                            "Thank you for placing an order with us! Your payment was successful, and your order is now being processed. " +
+                            "It will be delivered to the specified address shortly.\n\n" +
+                            "Order Details:\n" +
+                            "Order ID: " + savedOrder.getId() + "\n" +
+                            "Total Amount: " + savedOrder.getTotalAmount() + "\n" +
+                            "Payment Method: " + savedOrder.getPaymentMethod() + "\n" +
+                            "Delivery Address: " + savedOrder.getDeliveryAddress() + "\n" +
+                            "Expected Delivery Date: " + savedOrder.getExpectedDeliveryDate() + "\n\n" +
+                            "Thank you for choosing Scaler.\n\nBest Regards,\nTeam Scaler");
+                }
+                else if (savedOrder.getStatus() == OrderStatus.PENDING_PAYMENT) {
+                    // Payment unsuccessful email content
+                    emailMessage.setSubject("Payment Required for Order ID " + savedOrder.getId());
+                    emailMessage.setBody("Dear " + userDto.getEmail() + ",\n\n" +
+                            "We noticed an issue with your recent order payment, and it could not be processed successfully. " +
+                            "Please retry the payment within the next 10 minutes to complete your order. Your items are being held in the cart.\n\n" +
+                            "Order Details:\n" +
+                            "Order ID: " + savedOrder.getId() + "\n" +
+                            "Order Details: " + savedOrder.getOrderItems() + "\n" +
+                            "Total Amount: " + savedOrder.getTotalAmount() + "\n" +
+                            "Delivery Address: " + savedOrder.getDeliveryAddress() + "\n" +
+                            "Expected Delivery Date: " + savedOrder.getExpectedDeliveryDate() + "\n\n" +
+                            "If you have any questions, please contact our support team.\n\nBest Regards,\nTeam Scaler");
+                }
+
+                // Sending email message to Kafka
+                kafkaProducerClient.sendMessage("sendEmail", objectMapper.writeValueAsString(emailMessage));
+                logger.info("Order confirmation email successfully sent for userId: {}", userId);
+
+            } catch (Exception e) {
+                // Log error if there's an issue in sending the email or order message
+                logger.error("Error occurred while processing order email for userId {}: {}", userId, e.getMessage());
+            }
+        } else {
+            logger.warn("Order confirmation email not sent as user details are unavailable for userId: {}", userId);
+        }
+
+            logger.info("\n Saved order details post payment service call : {} \n ", savedOrder);
+
+            // Step 5: Convert to OrderResponseDto and return
+            logger.info("\n Returning OrderResponse dto details: {} \n ", savedOrder);
+            return orderMapper.toOrderResponseDto(savedOrder);
     }
 
     // Fetch all orders for a specific user
@@ -84,27 +159,52 @@ public class OrderServiceImpl implements OrderService {
                     .body("No orders found. Please place an order.");
         }
 
-        // Otherwise, return the list of orders
-        List<OrderResponseDto> orderResponseDtos = orders.stream()
+        // Return only the non-archived orders
+        List<Order> nonArchivedOrders = orders.stream()
+                .filter(order -> order.getStatus() != OrderStatus.ARCHIVED).toList();
+
+        // If there are no non-archived orders, return an empty list
+        if (nonArchivedOrders.isEmpty()) {
+            return ResponseEntity.ok(Collections.emptyList());
+        }
+
+        // Otherwise, return the list of non-archived orders
+        List<OrderResponseDto> orderResponseDtos = nonArchivedOrders.stream()
                 .map(orderMapper::toOrderResponseDto)
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.ok(orderResponseDtos);
     }
 
+    public List<OrderResponseDto> getAllOrders(){
+        List<Order> orders = orderRepository.findAll();
+        return orders.stream().map(orderMapper::toOrderResponseDto).toList();
+    }
     // Fetch a specific order by order ID
     @Override
     public OrderResponseDto getOrderById(Long orderId) {
         Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new OrderNotFoundException("Order with id: "+ orderId +" was not found"));
+                .orElseThrow(() -> new OrderNotFoundException("No Order was found with id: "+ orderId ));
         return orderMapper.toOrderResponseDto(order);
+    }
+
+    public List<OrderResponseDto> getArchivedOrders(Long userId) {
+        // Fetch the archived orders for the user
+        Optional<List<Order>> optionalOrders = orderRepository.findByStatusAndUserId(OrderStatus.ARCHIVED, userId);
+
+        // If orders are present, map them to OrderResponseDto; otherwise, return an empty list
+        return optionalOrders
+                .map(orders -> orders.stream()
+                        .map(orderMapper::toOrderResponseDto)
+                        .toList())
+                .orElse(Collections.emptyList());
     }
 
     // Update order status (e.g., shipped, delivered, etc.)
     @Override
     public OrderResponseDto updateOrderStatus(Long orderId, String status) {
         Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new OrderNotFoundException("Order with id: "+ orderId +" was not found"));
+                .orElseThrow(() -> new OrderNotFoundException("No Order was found with id: "+ orderId ));
         // Validate if the status can be updated manually
         if (!isValidStatusForManualUpdate(status)) {
             throw new IllegalArgumentException("Invalid status update. Only SHIPPED, DELIVERED, or RETURNED can be manually updated.");
@@ -117,9 +217,7 @@ public class OrderServiceImpl implements OrderService {
         // Return the updated order details
         return orderMapper.toOrderResponseDto(updatedOrder);
     }
-//        Order updatedOrder = orderRepository.save(order);
-//        return orderMapper.toOrderResponseDto(updatedOrder);
-//    }
+
 
     // Cancel an order
     @Override
@@ -131,10 +229,60 @@ public class OrderServiceImpl implements OrderService {
         order.setStatus(OrderStatus.CANCELLED);
         orderRepository.save(order);
 
-        // Return a success message with 200 OK status
-        String message = "Order was successfully Cancelled. If you already paid for your order, "
-                + "you will receive your refund on your payment method that you used for payment.";
 
+        // Send confirmation email to the user for the order placed
+        Long userId = order.getUserId();
+        UserDto userDto = fetchUserDetails(userId);
+
+// Proceed with email sending if user details are available
+        if (userDto != null) {
+            try {
+                // Send a Kafka message for order cancellation if required
+                kafkaProducerClient.sendMessage("orderCancelled", objectMapper.writeValueAsString(userDto));
+
+                // Prepare email message for order cancellation
+                SendEmailMessageDto emailMessage = new SendEmailMessageDto();
+                emailMessage.setTo(userDto.getEmail());
+                emailMessage.setFrom("admin@scaler.com");
+                emailMessage.setSubject("Order Cancellation for Order ID " + orderId);
+                emailMessage.setBody("Dear " + userDto.getEmail() + ",\n\n" +
+                        "We wish to inform you that your order with Order ID " + orderId + " has been successfully cancelled. " +
+                        "If you have already paid for this order, the refund will be processed to the original payment method within 5-7 business days.\n\n" +
+                        "Order Details:\n" +
+                        "Order ID: " + orderId + "\n" +
+                        "Total Amount: " + order.getTotalAmount() + "\n" +
+                        "Payment Method: " + order.getPaymentMethod() + "\n" +
+                        "Delivery Address: " + order.getDeliveryAddress() + "\n\n" +
+                        "We apologize for any inconvenience caused. Please reach out to our support team if you have any questions.\n\n" +
+                        "Best Regards,\nTeam Scaler");
+
+                // Send cancellation email message to Kafka
+                kafkaProducerClient.sendMessage("sendEmail", objectMapper.writeValueAsString(emailMessage));
+                logger.info("Order cancellation email successfully sent for userId: {}", userId);
+            } catch (Exception e) {
+                logger.error("Error occurred while sending cancellation email for userId {}: {}", userId, e.getMessage());
+            }
+        }
+
+        // Return a success message with 200 OK status
+        String message = "Order was successfully cancelled. If you already paid for your order, "
+                + "you will receive your refund on the payment method that you used for payment.";
+        return ResponseEntity.status(HttpStatus.OK).body(message);
+    }
+
+    @Override
+    public ResponseEntity<String> archiveOrder(Long orderId) {
+        Order order = orderRepository.findById(orderId)
+                .orElseThrow(() -> new OrderNotFoundException("Order with id: " + orderId + " was not found"));
+
+        // Set the order status to ARCHIVED
+        order.setStatus(OrderStatus.ARCHIVED);
+        orderRepository.save(order);
+
+        logger.info("Order with id {} was archived successfully", orderId);
+
+        // Return a success message with 200 OK status
+        String message = " Your Order is archived now. You can view it from the archived orders section.";
         return ResponseEntity.status(HttpStatus.OK).body(message);
     }
 
@@ -185,5 +333,18 @@ public class OrderServiceImpl implements OrderService {
         return status.equals(OrderStatus.SHIPPED.name()) ||
                 status.equals(OrderStatus.DELIVERED.name()) ||
                 status.equals(OrderStatus.RETURNED.name());
+    }
+
+    private UserDto fetchUserDetails(Long userId) {
+        UserDto userDto = null;
+        try {
+            // Fetching user Details
+            userDto = userClient.getUserById(userId);
+            logger.info("Successfully fetched user details for userId: {}", userId);
+        } catch (Exception e) {
+            // Log error when user details cannot be fetched
+            logger.error("Failed to fetch user details for userId {}: {}", userId, e.getMessage());
+        }
+        return userDto;
     }
 }
